# apim-educational

./: .gitignore  .pylintrc  .spectral.yaml  CONTRIBUTING.md  README.md  bicepconfig.json  pyproject.toml  start.ps1  start.sh
.github/workflows/: api-tests.yml  infra-deploy.yml  infra-validate.yml  lint.yml  python-tests.yml
docs/: ai-gateway.md  api-center.md  concepts.md  front-door.md  networking.md  observability.md  security.md  tiers-and-skus.md  troubleshooting.md  workspaces.md
docs/diagrams/: README.md
docs/migration/: aws-to-apim.md  google-to-apim.md
frontend-samples/: README.md
frontend-samples/angular-sample/: README.md  angular.json  package.json
frontend-samples/react-sample/: README.md  index.html  package.json  vite.config.ts
gateway/: docker-compose.yml
gateway/k8s/: README.md
infra/bicep/: README.md  apim.bicep  diagnostics.bicep  main.bicep  main.json  network.bicep  workspace.bicep  workspace.json
infra/terraform/: README.md  internal.tfvars  main.tf  outputs.tf  public-dev.tfvars  variables.tf  workspaces-demo.tfvars
labs/: README.md
labs/lab-01-beginner/: README.md
labs/lab-02-intermediate/: README.md
labs/lab-03-advanced/: README.md
labs/lab-04-expert/: README.md
labs/lab-05-ops-architecture/: README.md
labs/lab-06-workspaces/: README.md
policies/: README.md  ai-gateway.xml  cache.xml  ip-filter.xml  jwt-validate.xml  mtls.xml  rate-limit.xml  retry.xml  transform.xml
scripts/: deploy-apim.ps1  deploy-apim.sh  import-openapi.ps1  import-openapi.sh  sync-api-center.ps1  sync-api-center.sh
(+58 files in other folders)
